# paper-watcher

./: README.md  pyproject.toml
config/: asgi.py  settings.py  wsgi.py
core/: models.py  utils.py  views.py
core/migrations/: 0011_parseditem.py  0012_remove_paper_article_type_remove_paper_data_type_and_more.py
core/templates/core/: download.html  home.html  login.html  payment.html  stat.html
core/templates/core/includes/: intro.html
data/: fields.tsv
data/biological-computing-papers/: fields.tsv  keywords.txt
data/biomed-dl/: fields.tsv
data/single-cell-papers/: fields.tsv  keywords.txt
data/synthetic-biology-papers/: fields.tsv  keywords.txt
mysite/: settings.py
prompts/: system.txt
scripts/: fill-abstract.py  scan-pubmed.py  setup.sh
templates/: base.html
